kubernetes/applications/media/servarr/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bazarr
  ports:
    - name: web
      port: 80
      targetPort: http
