kubernetes/applications/media/servarr/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Subtitle Manager
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Servarr
    gethomepage.dev/icon: bazarr.png
    gethomepage.dev/name: Bazarr
spec:
  ingressClassName: cilium
  rules:
    - host: bazarr.costanza.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 80
  tls:
    - hosts:
        - bazarr.costanza.cloud
      secretName: bazarr-tls
